# rust-web-template

./: Cargo.toml
src/: lib.rs
src/handler/: mod.rs
src/handler/admin/: index.rs  login.rs  mod.rs
src/middleware/: auth.rs
src/request/: mod.rs
src/response/: mod.rs
