[package]
name = "hospital"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.18"
hyper = {version = "0.14.15", features = ["server", "http1", "http2", "tcp", "stream"]}
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
sqlx = {version = "0.5.9", features = ["runtime-tokio-rustls", "mysql"]}
tokio = {version = "1.14.0", features = ["full"]}

[lib]
